-c fix padding on mobile faq

--- a/src/styles/residency.css
+++ b/src/styles/residency.css
@@ -411,6 +411,7 @@ footer {
   }
   .faq-container {
     flex-direction: row;
+    padding-bottom: 15rem;
   }
   .faq-container-text {
     padding: 0 11% 15% 8%;
